[package]
name = "image-processing"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wasm-bindgen = "0.2.74"
web-sys = { version = "0.3.60", features = ["console"] }
base64 = "0.21.0"
image = "0.24.5"

# Allow other languages to comm w lib
[lib]
crate-type = ["cdylib"]
